fix Bug #46060: addEmptyDir() breaks